--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,8 @@
+/*
+Created by: Daegan Wilcox
+CSS styling code creates the format for the login page,
+which has it's own separate html file. 
+*/
 html,
 body {
   height: 100%;
